Update structure